Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/poll-webapp/src/main/webapp/skin/less/poll.less
+++ b/poll-webapp/src/main/webapp/skin/less/poll.less
@@ -141,7 +141,7 @@
     }
     .total-votes {
       font-size: 14px;
-      color: @grayLight
+      color: @textLightColor
     }
   }
 }
@@ -149,6 +149,6 @@
 #poll-activity-stream {
   .votes-remaining-state {
     font-size: 14px;
-    color: @grayLight
+    color: @textLightColor
   }
 }
